<resources>
    <string name="app_name">JobSeeker</string>
    <string name="search_button_text">Find!</string>

    <!--Bottom navigation-->
    <string name="item_parameters_text">Parameters</string>
    <string name="item_skills_text">Skills</string>
    <string name="item_saved_vacancies_text">Saved vacancies</string>

    <!--Search by parameters-->
    <string name="app_title">Job seeker</string>
    <string name="app_title_parenthesis">)</string>
    <string name="key_words_input_hint">Junior/QA/Python…</string>
    <string name="extended_search_button_text">Extended search</string>
    <string name="experience_label_text">Experience</string>
    <string name="category_input_hint">Category</string>
    <string name="location_input_hint">Location</string>

    <!--Search by skills-->
    <string name="search_by_skills_hint_text">Here you can enter your skills and we will find suitable vacancies</string>
    <string name="skills_input_hint">Skills</string>
    <string name="add_skill_button_content_description">Add skill</string>


    <!--Saved Vacancies-->
    <string name="empty_saved_vacancies_text_view_text">There are no saved vacancies</string>
    <string-array name="location_array">
        <item>Kyiv</item>
        <item>Lviv</item>
        <item>Dnipro</item>
        <item>Odesa</item>
        <item>Vinnytsya</item>
        <item>Kharkiv</item>
        <item>Ivano-Frankivsk</item>
        <item>Ternopil</item>
        <item>Chernivtsi</item>
        <item>Lutsk</item>
        <item>Cherkasy</item>
        <item>Poltava</item>
        <item>Uzhhorod</item>
        <item>Rivne</item>
        <item>Sumy</item>
        <item>Zhytomyr</item>
        <item>Zaporizhzhia</item>
        <item>Khmelnytskyi</item>
        <item>Kremenchuk</item>
        <item>Mykolaiv</item>
        <item>Chernihiv</item>
        <item>Kropyvnytskyi</item>
        <item>Kherson</item>
        <item>Bila Cerkva</item>
        <item>Donetsk</item>
        <item>Kryvyi Rig</item>
        <item>Lugansk</item>
        <item>Mariupol</item>
        <item>Drogobych</item>
        <item>Remote</item>
        <item>Relocation</item>
    </string-array>
    <string-array name="category_array">
        <item>.NET</item>
        <item>Analyst</item>
        <item>Android</item>
        <item>Animator</item>
        <item>Architect</item>
        <item>Artist</item>
        <item>Big Data</item>
        <item>Blockchain</item>
        <item>C++</item>
        <item>C-level</item>
        <item>Copywriter</item>
        <item>Data Science</item>
        <item>DBA</item>
        <item>Design</item>
        <item>DevOps</item>
        <item>Embedded</item>
        <item>Engineering Manager</item>
        <item>Erlang</item>
        <item>ERP/CRM</item>
        <item>Finance</item>
        <item>Flutter</item>
        <item>Front End</item>
        <item>Golang</item>
        <item>HR</item>
        <item>iOS/macOS</item>
        <item>Java</item>
        <item>Legal</item>
        <item>Marketing</item>
        <item>Node.js</item>
        <item>Office Manager</item>
        <item>Other</item>
        <item>PHP</item>
        <item>Product Manager</item>
        <item>Project Manager</item>
        <item>Python</item>
        <item>QA</item>
        <item>React Native</item>
        <item>Ruby</item>
        <item>Rust</item>
        <item>Sales</item>
        <item>Salesforce</item>
        <item>SAP</item>
        <item>Scala</item>
        <item>Scrum Master</item>
        <item>Security</item>
        <item>SEO</item>
        <item>Support</item>
        <item>SysAdmin</item>
        <item>Technical Writer</item>
        <item>Unity</item>
        <item>Unreal Engine</item>
    </string-array>
    <string name="experience_spinner_prompt">
        Select an option
    </string>
    <string-array name="experience_array">
        <item>Any</item>
        <item>No experience</item>
        <item>1 year</item>
        <item>3 years</item>
        <item>5 years</item>
    </string-array>
</resources>