<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="searchParametersFragment"
            type="com.example.jobseeker.ui.fragments.SearchByParametersFragment" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context=".ui.fragments.SearchByParametersFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_title_margin_top"
                android:text="@string/app_title"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/app_title_text_size"
                app:fontFamily="@font/roboto_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/app_title_parenthesis_margin_top"
                android:fontFamily="@font/roboto_black"
                android:rotation="90"
                android:text="@string/app_title_parenthesis"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/app_title_parenthesis_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.59"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/app_title" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/key_words_card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_card_view_margin_top"
                app:cardBackgroundColor="?attr/colorPrimary"
                app:cardElevation="@dimen/search_card_view_elevation"
                app:contentPaddingBottom="@dimen/search_card_view_content_padding_bottom"
                app:contentPaddingLeft="@dimen/search_card_view_content_padding_left"
                app:contentPaddingRight="@dimen/search_card_view_content_padding_right"
                app:contentPaddingTop="@dimen/search_card_view_content_padding_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_title"
                app:strokeColor="?attr/colorPrimary">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/key_words_input_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:boxBackgroundColor="?attr/colorSurfaceContainerLow"
                        app:hintEnabled="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/key_words_input"
                            android:layout_width="@dimen/key_words_input_width"
                            android:layout_height="wrap_content"
                            android:hint="@string/key_words_input_hint"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:textColorHint="?attr/colorSecondary"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/search_button"
                        android:layout_width="@dimen/search_by_parameters_search_button_width"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/search_by_parameters_search_button_margin_top"
                        android:backgroundTint="?attr/colorSurfaceContainerLow"
                        android:fontFamily="@font/roboto_black"
                        android:onClick="@{()-> searchParametersFragment.submitSearchParameters()}"
                        android:text="@string/search_button_text"
                        android:textColor="?attr/colorPrimary"
                        android:textSize="@dimen/search_by_parameters_search_button_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/key_words_input_layout" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/key_words_card_view">

                <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                    android:id="@+id/extended_search_card_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/extended_search_card_view_margin_top"
                    android:visibility="invisible"
                    app:cardBackgroundColor="?attr/colorSurfaceVariant"
                    app:contentPaddingBottom="@dimen/extended_search_card_view_content_padding_bottom"
                    app:contentPaddingLeft="@dimen/extended_search_card_view_content_padding_left"
                    app:contentPaddingRight="@dimen/extended_search_card_view_content_padding_right"
                    app:contentPaddingTop="@dimen/extended_search_card_view_content_padding_top">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/experience_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:labelFor="@id/experience_spinner"
                            android:text="@string/experience_label_text"
                            android:textSize="@dimen/experience_label_text_size"
                            app:layout_constraintBottom_toBottomOf="@+id/experience_spinner"
                            app:layout_constraintEnd_toStartOf="@+id/experience_spinner"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/experience_spinner" />

                        <Spinner
                            android:id="@+id/experience_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/experience_label"
                            app:layout_constraintTop_toTopOf="parent" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/category_input_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/category_input_margin_top"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/experience_spinner">

                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:id="@+id/category_input"
                                android:layout_width="@dimen/category_input_width"
                                android:layout_height="wrap_content"
                                android:hint="@string/category_input_hint"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="parent" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/location_input_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/location_input_margin_top"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/category_input_layout">

                            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                                android:id="@+id/location_input"
                                android:layout_width="@dimen/location_input_width"
                                android:layout_height="wrap_content"
                                android:hint="@string/location_input_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/extended_search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:backgroundTint="?attr/colorSurfaceVariant"
                    android:fontFamily="@font/roboto_black"
                    android:text="@string/extended_search_button_text"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="@dimen/extended_search_button_text_size"
                    app:icon="@drawable/animated_ic_open_extended_search"
                    app:iconGravity="end"
                    app:iconSize="@dimen/extended_search_button_icon_size"
                    app:iconTint="?attr/colorSecondary"
                    app:rippleColor="?attr/colorSurfaceVariant" />
            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
